[package]
name = "vt100_player"
authors = ["Mateusz Janda <mateusz.janda@gmail.com>"]
repository = "https://github.com/MateuszJanda/vt100_globe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
termion = "1.5"

[dependencies.tokio]
version = "1.20"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]


